# ctf

./: .gitattributes  .gitignore  .gitmodules  BUILD  BUILD.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: build_amd64.yml  buildandtest_amd64.yml
Source/: CMakeLists.txt
Source/CTF/: CMakeLists.txt
Source/CTF/ctf/: Algorithm.cpp  Algorithm.h  AnonymousPipeStream.cpp  AnonymousPipeStream.h  Assert.h  BasicString.h  CMakeLists.txt  CTF.cpp  CTF.h  Color.cpp  Color.h  ColorUtil.cpp  ColorUtil.h  FileStream.cpp  FileStream.h  IOStream.cpp  IOStream.h  IStream.cpp  IStream.h  MemOverride.cpp  Memory.cpp  Memory.h  NamedPipeStream.cpp  NamedPipeStream.h  OStream.cpp  OStream.h  OStringStream.cpp  OStringStream.h  PipeStream.cpp  PipeStream.h  RefCounted.cpp  RefCounted.h  RefCounter.cpp  RefCounter.h  RefPtr.cpp  RefPtr.h  Runtime.cpp  Runtime.h  Stream.cpp  Stream.h  (+5 more)
Source/CTF/ctf/Collections/: Hash.cpp  Hash.h  List.h  List.inl  Map.h  Map.inl  Pair.cpp  Pair.h  Vector.h  Vector.inl
Source/CTF/ctf/FileSystem/: File.cpp  File.h  Path.cpp  Path.h
Source/CTF/ctf/Json/: Json.cpp  Json.h  JsonAllocator.cpp  JsonAllocator.h  JsonArray.h  JsonObject.h  JsonParser.cpp  JsonParser.h  JsonRpc.cpp  JsonRpc.h  JsonType.h  JsonValue.cpp  JsonValue.h
Source/CTF/ctf/KeyValues/: KeyValues.cpp  KeyValues.h  KeyValuesParser.cpp  KeyValuesParser.h  KeyValuesType.h  KeyValuesValue.h
Source/CTF/ctf/Logging/: LogListener.cpp  LogListener.h  Logger.cpp  Logger.h  LoggerSystem.cpp  LoggerSystem.h
Source/CTF/ctf/Math/: Logarithms.h  Power.h  Rounding.h  Trigonometry.h
Source/CTF/ctf/Threading/: Mutex.h  Task.h  Thread.h
Source/CTF/ctf/Util/: CLIParser.cpp  CLIParser.h
Source/CTF/tests/: CMakeLists.txt
Source/CTF/tests/io/: CMakeLists.txt  main.cpp  ostringstreamtest.cpp  pipestreamtest.cpp
Source/CTF/tests/json/: CMakeLists.txt  jsonrpctest.cpp  jsontest.cpp  main.cpp
Source/CTF/tests/jsonrpc/: CMakeLists.txt  main.cpp
Source/CTF/tests/math/: CMakeLists.txt  logarithmtest.cpp  main.cpp  trigonometrytest.cpp
